# slide2note-PoC

./: .gitignore  README.md  biome.json  docker-compose.yml  example.md  example.txt  justfile  kaggle.py  kernel-metadata.json  lefthook.yml  main.py  package.json  pyproject.toml  test.py
.github/: dependabot.yml
server/: .env.sample  db.py  llm.py  main.py  pyproject.toml
web/: .env.sample  package.json  sqlite.db
web/app/: actions.ts  form.tsx  page.tsx
web/app/api/auth/[...all]/: route.ts
web/app/lib/: auth.ts
web/app/sign-in/: page.tsx
web/app/sign-up/: page.tsx
web/app/slides/: page.tsx
web/app/ui/: form.tsx
web/components/: SignInForm.tsx  SignUpForm.tsx  SlideForm.tsx
