[project]
name = "slide2note"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "easyocr>=1.7.2",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pdf2image>=1.17.0",
    "pillow>=11.2.1",
    "pyocr>=0.8.5",
    "pypdf>=5.5.0",
    "torch>=2.7.0",
]
